--- a/index.html
+++ b/index.html
@@ -5,35 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Calculator - By Code Traversal</title>
+    <title>Calculator - Code Traversal</title>
   </head>
   <body>
     <div class="container">
       <div class="calculator">
-        <input type="text" id="inputBox" placeholder="0" />
+        <input type="text" id="inputBox" placeholder="0" readonly />
+
         <div class="row">
-        <div>
           <button class="button operator">AC</button>
           <button class="button operator">DEL</button>
           <button class="button operator">%</button>
           <button class="button operator">/</button>
         </div>
+
         <div class="row">
-        <div>
           <button class="button">7</button>
           <button class="button">8</button>
           <button class="button">9</button>
           <button class="button operator">*</button>
         </div>
+
         <div class="row">
-        <div>
           <button class="button">4</button>
           <button class="button">5</button>
           <button class="button">6</button>
           <button class="button operator">-</button>
         </div>
+
         <div class="row">
-        <div>
           <button class="button">1</button>
           <button class="button">2</button>
           <button class="button">3</button>
@@ -41,7 +41,6 @@
         </div>
 
         <div class="row">
-        <div>
           <button class="button">00</button>
           <button class="button">0</button>
           <button class="button">.</button>
@@ -49,6 +48,7 @@
         </div>
       </div>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
