--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Calculator - Code Traversal</title>
+    <title>Calculator 🧮</title>
   </head>
-  <body>
+  <body >
     <div class="container">
       <div class="calculator">
-        <input type="text" id="inputBox" placeholder="0" readonly />
+        <input type="text" id="inputBox" placeholder="0" readonly  class="input1"/>
 
         <div class="row">
           <button class="button operator">AC</button>
@@ -19,7 +19,7 @@
           <button class="button operator">/</button>
         </div>
 
-        <div class="row">
+        <div class="row" >
           <button class="button">7</button>
           <button class="button">8</button>
           <button class="button">9</button>
